<resources>
    <string name="app_name">Cards</string>
    <string name="question_text">Tree</string>
    <string name="answer_button_text">Check answer</string>
    <string name="help_button">Help</string>
    <string name="answer_text">Arbol</string>
    <string name="easy_button_title">Easy</string>
    <string name="doubt_button_title">Doubt</string>
    <string name="difficult_button_title">Hard</string>
    <string name="info_text_view_message">Number of remaining cards</string>
    <string name="due_cards_format">%d cards left</string>
    <string name="subtitle_text">Tap to study</string>
    <string name="list_text">List of Cards</string>
    <string name="review_button">Review cards</string>
    <string name="no_more_cards_toast_message">No more cards</string>
    <string name="text_question">Question</string>
    <string name="text_answer">Answer</string>
    <string name="edit_text_question">Write the question text</string>
    <string name="edit_text_answer">Write the answer text</string>
    <string name="accept_card_edit_button_title">Accept</string>
    <string name="cancel_card_edit_button_title">Cancel</string>
    <string name="new_card_fab_description">New card</string>
    <string name="new_deck_fab_description">New deck</string>
    <string name="added_card">Card added</string>
    <string name="decks_nav_menu_title">Decks</string>
    <string name="study_nav_menu_title">Review Cards</string>
    <string name="statistics_nav_menu_title">Statistics</string>
    <string name="about_nav_menu_title">About</string>
    <string name="delete_button">Delete</string>
    <string name="deck_name">Name</string>
    <string name="deck_id">Deck identification</string>
    <string name="edit_text_name">Write the name of the deck</string>
    <string name="edit_text_id">Write the id of the deck</string>
    <string name="stats_nav_menu_title">Statistics</string>
    <string name="about_about">My name is Marek Buch, im 21 years old. I am a student at Brno University of Technology but right now I\'m studying at Univesidad Autonoma de Madrid.</string>
    <string name="author_text">Author</string>
    <string name="desc_text">Description</string>
    <string name="version_text">Version</string>
    <string name="version_text_text">Version 1.0</string>
    <string name="actual_description_text">This application is a school project. The functionality is based on ANKI application.</string>
    <string name="generate_button">Generate test</string>
    <string name="settings_menu_title">Settings</string>
    <string name="logout_menu_title">Logout</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="decks_header">Decks</string>
    <string name="max_number_cards">Maximum number of cards</string>
    <string name="board_summary_off">Board unavailable</string>
    <string name="board_summary_on">Board available</string>
    <string name="board_title">Show board</string>


</resources>