<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="es.uam.eps.dadm.cards.StudyViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="@{viewModel.card == null ? View.INVISIBLE : View.VISIBLE}">

        <TextView
            android:id="@+id/info_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{@string/due_cards_format(viewModel.nDueCards)}"
            android:textSize="20sp"
            tools:text="@string/info_text_view_message"/>

        <TextView
            android:id="@+id/question_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@{viewModel.card.question}"
            android:textSize="20sp"
            tools:text="@{viewModel.card.question}" />

        <TextView
            android:id="@+id/answer_text_view"
            android:layout_below="@id/separator_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@{viewModel.card.answer}"
            android:visibility="@{viewModel.card.answered ? View.VISIBLE : View.INVISIBLE}"
            android:textSize="20sp"
            tools:text="@{viewModel.card.answer}" />

        <View
            android:id="@+id/separator_view"
            android:layout_below="@id/question_text_view"
            android:layout_width="match_parent"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="30dp"
            android:layout_height="1dp"
            android:visibility="@{viewModel.card.answered ? View.VISIBLE : View.INVISIBLE}"
            android:background="@android:color/darker_gray"/>

        <Button
            android:id="@+id/answer_button"
            android:layout_below="@id/answer_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.card.answered ? View.INVISIBLE : View.VISIBLE}"
            android:layout_centerInParent="true"
            android:text="@string/answer_button_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center">

            <Button
                android:id="@+id/easy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_green_light"
                android:visibility="@{viewModel.card.answered ? View.VISIBLE : View.INVISIBLE}"
                android:text="@string/easy_button_title" />
            <Button
                android:id="@+id/doubt_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_blue_light"
                android:visibility="@{viewModel.card.answered ? View.VISIBLE : View.INVISIBLE}"
                android:text="@string/doubt_button_title" />
            <Button
                android:id="@+id/diff_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_red_light"
                android:visibility="@{viewModel.card.answered ? View.VISIBLE : View.INVISIBLE}"
                android:text="@string/difficult_button_title" />

        </LinearLayout>

    </RelativeLayout>
</layout>